Made the returns invisible by default in InventoryGraph. Fixed an issue where the returns state would revert back to true incorrectly in Inventory Graph + Scope Selector

--- a/frontend/src/OverlappingHorizontalGraphLines.scss
+++ b/frontend/src/OverlappingHorizontalGraphLines.scss
@@ -154,7 +154,7 @@
 
 .ohgl-returns-number {
   padding: 0.25rem 0.5rem 0.25rem 0.5rem;
-  margin-right: 0.5rem;
+  margin-left: 0.5rem;
   background-color: grey;
   border-radius: 15px;
 }
